gap issues resolved

--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -3,7 +3,6 @@
     display:flex;
     justify-content:center;
     align-items:center;
-    padding: 80px 0;
     box-sizing: border-box;
     background:#0d1117;
 }
@@ -37,7 +36,7 @@
     font-size:clamp(3rem,7vw,6rem);
     font-weight:800;
     color:white;
-    min-height:110px;
+    min-height: 110px;
     display:flex;
     justify-content:center;
     align-items:center;
@@ -55,9 +54,6 @@
 
 .carousel-wrapper{
     position: relative;
-    min-height: 850px;
-    /* width: 1200px; */
-    
 }
 
 @media (max-width: 768px) {
